--- a/website/Web_Site/Web_App/Web_AppTemps/Web_App/home.html
+++ b/website/Web_Site/Web_App/Web_AppTemps/Web_App/home.html
@@ -10,13 +10,15 @@
 </head>
 <body>
     <div class="topnav">
-  <a href="#home" class="active">Ituka</a>
+  <a href="/home" class="active">Ituka</a>
+        <a href="#home" class="active">Log in</a>
+        <a href="#home" class="active">Sign Up</a>
   <!-- Navigation links (hidden by default) -->
   <div id="myLinks">
       <a href="/home">Home</a>
-    <a href="#news">News</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
+    <a href="/myAccount">MyAccount</a>
+    <a href="/contact">Contact</a>
+    <a href="/about">About</a>
   </div>
   <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
