Fixed a lot of formatting issues

--- a/website/Web_Site/Web_App/Web_AppTemps/Web_App/about.html
+++ b/website/Web_Site/Web_App/Web_AppTemps/Web_App/about.html
@@ -11,8 +11,6 @@
 <body>
     <div class="topnav">
   <a href="/home" class="active">Ituka</a>
-        <a href="/logIn" class="logIn">Log in</a>
-        <a href="/signUp" class="signUp">Sign Up</a>
   <!-- Navigation links (hidden by default) -->
   <div id="myLinks">
       <a href="/home">Home</a>
@@ -26,7 +24,11 @@
   </a>
     </div>
 
+<p id="bodyParagraphs">
 
+    Test
+
+</p>
 
 
 
