--- a/website/Web_Site/Web_App/Web_AppTemps/Web_App/home.html
+++ b/website/Web_Site/Web_App/Web_AppTemps/Web_App/home.html
@@ -11,12 +11,10 @@
 <body>
     <div class="topnav">
   <a href="/home" class="active">Ituka</a>
-        <a href="/logIn" class="logIn">Log in</a>
-        <a href="/signUp" class="signUp">Sign Up</a>
   <!-- Navigation links (hidden by default) -->
   <div id="myLinks">
       <a href="/home">Home</a>
-    <a href="/myAccount">MyAccount</a>
+    <a href="/myAccount">My Account</a>
     <a href="/contact">Contact Us</a>
     <a href="/about">About</a>
   </div>
@@ -26,33 +24,25 @@
   </a>
     </div>
 
+<p id="bodyParagraphs">
 
-    <div class="element">
-        <p>Text</p>
-    </div>
-    <div class="element">
-        <p>Test</p>
-    </div>
-    <div class="element">
-        <p>Video</p>
-    </div>
-    <div class="element">
-        <p>Apps</p>
-    </div>
+    Test
+
+</p>
+
 
 
 </body>
 
 <footer>
 
-        <p>
+    <p>
 
-            About Us
+        Footer Test
 
-        </p>
+    </p>
 
 </footer>
-
 
 
 <script>
