--- a/website/Web_Site/Web_App/Web_AppTemps/Web_App/about.html
+++ b/website/Web_Site/Web_App/Web_AppTemps/Web_App/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" media="all" type="text/css" href="{% static 'Web_App/style.css' %}" />
+    <link rel="stylesheet" media="all" type="text/css" href="{% static 'Web_App/about.css' %}" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Ituka</title>
 </head>
@@ -27,6 +27,8 @@
 <p id="bodyParagraphs">
 
     Test
+
+
 
 </p>
 
