Added a search bar

--- a/website/Web_Site/Web_App/Web_AppTemps/Web_App/home.html
+++ b/website/Web_Site/Web_App/Web_AppTemps/Web_App/home.html
@@ -24,11 +24,15 @@
   </a>
     </div>
 
+    <!-- Creates my stupid search bar.. this was hell -->
+     <form id="searchform" action="search" method="get">
+    <input type="text" name="q" type="text"/>
+    <button type="button" onclick="searchform.submit()">Search</button>
+    </form>
+
 <p id="bodyParagraphs">
 
     Test
-
- 
 
 
 
