--- a/website/Web_Site/Web_App/Web_AppTemps/Web_App/about.html
+++ b/website/Web_Site/Web_App/Web_AppTemps/Web_App/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" media="all" type="text/css" href="{% static 'Web_App/style.css' %}" />
+    <link rel="stylesheet" media="all" type="text/css" href="{% static 'Web_App/about.css' %}" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Ituka</title>
 </head>
@@ -14,7 +14,7 @@
   <!-- Navigation links (hidden by default) -->
   <div id="myLinks">
       <a href="/home">Home</a>
-    <a href="/myAccount">My Account</a>
+    <a href="/myAccount">MyAccount</a>
     <a href="/contact">Contact Us</a>
     <a href="/about">About</a>
   </div>
@@ -23,12 +23,6 @@
     <i class="fa fa-bars"></i>
   </a>
     </div>
-
-    <!-- Creates my stupid search bar.. this was hell -->
-     <form id="searchform" action="search" method="get">
-    <input type="text" name="q" type="text"/>
-    <button type="button" onclick="searchform.submit()">Search</button>
-    </form>
 
 <p id="bodyParagraphs">
 
@@ -44,13 +38,14 @@
 
 <footer>
 
-    <p>
+        <p>
 
-        Footer Test
+            About Us
 
-    </p>
+        </p>
 
 </footer>
+
 
 
 <script>
